MediaRouter: Cache MediaRoutesObserver queries to prevent ext wake-ups

Resolved a performance issue where the Media Router component extension
was being woken-up each time a new tab was opened. The solution is to
cache route list updates so that the registration of new observers does
not force the extension to wake-up to report on something we can cache
browser-side. (This is the same as what is already being done for the
MediaSinksObservers.)

BUG=621246
TEST=Ran chrome with --enable-logging=stderr --vmodule=media_router_mojo_impl=1 to confirm extension wake-ups do not happen when opening new tabs.

Review-Url: https://codereview.chromium.org/2735493002
Cr-Commit-Position: refs/heads/master@{#454769}

Former-commit-id: 34e86af9f3ebe792b7681053eca4c08b27eca52d